--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^2.4.3",
