feat: implement layout adjustments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,6 +52,12 @@
       ],
       "@components/*": [
         "src/components/*"
+      ],
+      "@routes": [
+        "src/routes"
+      ],
+      "@routes/*": [
+        "src/routes/*"
       ]
     }
   },
