--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "change-case": "^4.1.2",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
@@ -23,6 +24,7 @@
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^2.4.3",
+    "slick-carousel": "^1.8.1",
     "strip-js": "^1.2.0",
     "typeface-inter": "^3.18.1",
     "util": "^0.12.5",
