--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:its": "tsc-silent -p './tsconfig.json' --suppress @ && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -35,6 +36,8 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "install": "^0.13.0",
+    "tsc-silent": "^1.2.2",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
